Fixed .main-header::after z-index who was covering first team member

--- a/src/sass/components/main-header.scss
+++ b/src/sass/components/main-header.scss
@@ -6,8 +6,8 @@
     background-color: $color-vix-pink;
     height: 80px;
     align-items: center;
+    grid-auto-rows: 80px;
     transition: 0.3s;
-    padding: 5px 0 5px 0;
 }
 
 .main-header__logo--small > img{
@@ -55,6 +55,7 @@
     background-repeat: no-repeat;
     left: 0;
     transition: 0.3s;
+    z-index: -10;
 }
 
 .main-header__animation::after{
